fixed spacing a bit

--- a/scss/layouts/homepage.scss
+++ b/scss/layouts/homepage.scss
@@ -15,6 +15,7 @@
       //border: 2px solid $color-Primary-Blue;
       padding: 15rem;
       padding-top: 2rem;
+      padding-bottom: 0rem;
       font-family: "Libre Franklin", sans-serif;
 
       &--title {
